<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpSuccessActivity">

    <ImageView
        android:id="@+id/img_asus_success"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/vc_success" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/success_heading"
        android:textAlignment="center"
        android:textColor="@color/whitePrimary"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/montserrat_regular"
        android:lineSpacingExtra="7dp"
        android:text="@string/success_description"
        android:textAlignment="center"
        android:textColor="@color/whitePrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_asus_start"
        style="@style/ButtonGeneral"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rounded_white"
        android:text="@string/success_start"
        android:textColor="@color/redPrimary" />

</LinearLayout>