<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/txt_ags_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/back"
        android:textColor="@color/blackPrimary"
        android:textSize="13sp"
        android:visibility="invisible"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/txt_ags_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/next"
        android:textColor="@color/blackPrimary"
        android:textSize="13sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/txt_ags_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/finish"
        android:textColor="@color/redPrimary"
        android:textSize="13sp"
        android:visibility="invisible"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/dots_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:tabBackground="@drawable/dots_selector"
        app:tabIndicatorHeight="0dp" />

</RelativeLayout>