<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.github.florent37.shapeofview.shapes.CircleView
            android:id="@+id/sov_fp_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/img_fp_profile"
                android:layout_width="117dp"
                android:layout_height="117dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/vc_profile" />
        </com.github.florent37.shapeofview.shapes.CircleView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/sfl_fp_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sov_fp_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">

            <include layout="@layout/shimmer_profile" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/txt_fp_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sov_fp_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_fp_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_fp_full_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:textColor="@color/blackPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_fp_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_fp_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textColor="@color/redPrimary"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_weight="0"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_favorite_outline" />

        <TextView
            android:id="@+id/txt_fp_total_favorite"
            style="@style/TextProfileMenu"
            android:layout_weight="2"
            android:text="@string/total_favorite"
            android:textColor="@color/blackPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_weight="0"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_help" />

        <TextView
            android:id="@+id/txt_fp_help"
            style="@style/TextProfileMenu"
            android:layout_weight="2"
            android:text="@string/help"
            android:textColor="@color/blackPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_weight="0"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_about" />

        <TextView
            android:id="@+id/txt_fp_about"
            style="@style/TextProfileMenu"
            android:layout_weight="2"
            android:text="@string/about"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_weight="0"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_sign_out" />

        <TextView
            android:id="@+id/txt_fp_sign_out"
            style="@style/TextProfileMenu"
            android:layout_weight="2"
            android:text="@string/sign_out"
            android:textColor="@color/redPrimary" />
    </LinearLayout>

    <TextView style="@style/TextCopyright" />

</LinearLayout>