<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnt_afd_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetailActivity">

    <ProgressBar
        android:id="@+id/pbr_afd_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="168dp" />

    <Button
        android:id="@+id/btn_afd_lens"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_lens"
        app:layout_constraintBottom_toBottomOf="@id/btn_afd_back"
        app:layout_constraintEnd_toEndOf="@id/btn_afd_back"
        app:layout_constraintStart_toStartOf="@id/btn_afd_back"
        app:layout_constraintTop_toTopOf="@id/btn_afd_back" />

    <Button
        android:id="@+id/btn_afd_back"
        style="@style/ButtonBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:elevation="5dp"
                    app:shape_roundRect_bottomRightRadius="50dp">

                    <ImageView
                        android:id="@+id/img_afd_restaurant_image"
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:background="@color/graySecondary"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/vc_placeholder" />
                </com.github.florent37.shapeofview.shapes.RoundRectView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txt_afd_restaurant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:textColor="@color/blackPrimary"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/img_afd_favorite"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="0"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_favorite_gray" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_afd_full_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/montserrat_light"
                    android:lineSpacingExtra="4dp"
                    android:textColor="@color/blackPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextDetailHeading"
                    android:text="@string/detail" />

                <TextView
                    android:id="@+id/txt_afd_open_day"
                    style="@style/TextDetailDescription"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/txt_afd_open_hour"
                    style="@style/TextDetailDescription"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:id="@+id/txt_afd_star_review"
                    style="@style/TextDetailDescription"
                    android:layout_marginTop="6dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextDetailHeading"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/txt_afd_approx_price"
                    style="@style/TextDetailDescription"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="24dp">

                <TextView
                    style="@style/TextDetailHeading"
                    android:text="@string/menu" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">

                    <ImageView
                        android:id="@+id/img_afd_menu"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/vc_placeholder" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_afd_maps"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/vc_maps" />
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/menu_afd_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>